부산대 BE_정재빈 4주차 과제 (1단계) (#208)
* 부산대 BE_정재빈_4주차 과제(0단계) (#37)

* Initial commit

* feat: set up the project

* 부산대 BE_정재빈 3주차 과제 (0단계) (#37)

* Initial commit

* feat: set up the project

* 부산대 BE_정재빈 2주차 과제 (0단계) (#29)

* Initial commit

* feat: set up the project

* feat(global): create global controller

* docs(global): summerize list of features

* feat(product): create product controller

* feat(product): create product entity

* fix(product): add column id into product entity

* feat(product): add method get product by id in controller

* feat(product): create product request record

* feat(product): add constructor to initialize Product from ProductRequest

* fix(product): change RequestMapping url error

* feat(product): add create product method

* fix(product): change endpoint product to products

* feat(product): add update product method

* feat(product): add delete product method

* feat(product): create http request file

* refactor(global): combine common parts of API URLs

* feat(product): add get all product method

* chore(product): rename global controller to view controller

* fix(global): change get products list api url

* chore(view): delete unnecssary parameter

* feat(view): create product management UI

* feat(product): create ServiceDto

* feat(product): add toServiceDto method to convert ProductRequest

* feat(product): change all method to use productService

* feat(product): create Product Not Found Exception

* feat(product): create Service Dto

* feat(product): create Product Service and methods

* feat(product): add isNew method in product entity

* chore(global): add data jdbc dependency

* feat(product): create product repository and methods

* feat(global): setting global exception handler

* feat(global): setting db properties

* feat(product): create input initial data sql

* feat(product): create schema sql to make table products

* fix(product)